--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -91,10 +91,7 @@ html
     / Flash Messages
     .container.mt-3
       - flash.each do |type, message|
-        - alert_class = case type.to_sym
-                        - when :notice, :success then 'alert-success'
-                        - when :alert, :error then 'alert-danger'
-                        - else 'alert-info'
+        - alert_class = { notice: 'alert-success', success: 'alert-success', alert: 'alert-danger', error: 'alert-danger' }.fetch(type.to_sym, 'alert-info')
         .alert.alert-dismissible.fade.show class=alert_class role="alert"
           = message
           button.btn-close type="button" data-bs-dismiss="alert" aria-label="Close"
