--- a/app/views/devise/registrations/edit.html.slim
+++ b/app/views/devise/registrations/edit.html.slim
@@ -14,6 +14,8 @@
           = simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f|
             = f.error_notification message: "Please fix the errors below:", class: "alert alert-danger"
             .mb-3
+              = f.input :username, required: true, input_html: { class: "form-control" }, label_html: { class: "form-label" }
+            .mb-3
               = f.input :name, required: false, input_html: { class: "form-control" }, label_html: { class: "form-label" }
             .mb-3
               = f.input :email, required: true, autofocus: true, input_html: { class: "form-control" }, label_html: { class: "form-label" }
