Add config file viewer to Rails kanban board
Features:
- Browse Sparky's config files (SOUL.md, AGENTS.md, etc.)
- Markdown rendering with syntax highlighting
- Sidebar navigation with file metadata
- Responsive design matching kanban UI
- Accessible from navbar (Config icon)

New files:
- app/controllers/config_controller.rb
- app/views/config/index.html.slim
- app/assets/javascripts/config_viewer.js

Modified:
- config/routes.rb (added /config routes)
- app/views/layouts/application.html.slim (navbar link)
- app/assets/stylesheets/application.css (markdown styles)
- config/puma.rb (bind to 0.0.0.0)

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -59,6 +59,12 @@ html
                   | Users
           
           ul.navbar-nav
+            / Config Viewer Link
+            li.nav-item.me-2
+              = link_to config_path, class: 'nav-link', title: 'View Config Files' do
+                i.bi.bi-file-earmark-text.me-1
+                span.d-none.d-lg-inline Config
+            
             / Theme Toggle Button
             / ============================================================================
             / LEARNING NOTES - STIMULUS DATA-ACTION:
