--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -141,5 +141,8 @@ html
           i.bi.bi-heart-fill.text-danger.mx-1
           | by MechDog & Sparky
 
+    / Page-specific JavaScript (loaded after Bootstrap)
+    = yield :javascript
+    
     / Bootstrap 5 JS
     script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
